<resources>
    <string name="app_name">Sergeev_Lesson2</string>
    <string name="action_bar_title">Aston intensive</string>
    <string name="header_image">Header image</string>
    <string name="title_text">IT-solutions for business development</string>
    <string name="sub_title_text">Software development</string>
    <string name="about_us_title">About us:</string>
    <string name="about_us_content">Aston is a full service software development company. For 15 years, we have been helping customers around the world transform their business by creating effective mobile and desktop solutions.</string>
    <string name="offices_title">Offices</string>
    <string name="moscow">Moscow</string>
    <string name="kazan">Kazan</string>
    <string name="rostov_Na_Donu">Rostov-on-Don</string>
    <string name="minsk">Minsk</string>
    <string name="gomel">Gomel</string>
    <string name="contacts_btn_title">Contacts</string>
    <string name="vacancies">Vacancies</string>
    <string name="gallery">Gallery</string>
    <string name="greeting">Приветствуем вас в Aston</string>
    <string name="title_text_example">Android trainee</string>
    <string name="subtitle_text_example">Android Internship</string>
    <string name="home_title_bnb">Home</string>
    <string name="vacancies_title_bnb">Vacancies</string>
    <string name="offices_title_bnb">Offices</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="login_title_enter">Enter</string>
    <string name="login_btn_title">Enter</string>
    <string name="password_error_text">Wrong password</string>
    <string name="flutter_title">Flutter Developer</string>
    <string name="flutter_descr">Опыт работы с Flutter/Dart от 3-х лет</string>
    <string name="fullstack_title">Full-Stack Developer</string>
    <string name="fullstack_descr">Уверенное владение React, Java</string>
    <string name="android_title">Android Developer</string>
    <string name="android_descr">Опыт коммерческой разработки под Android от 3-х лет;</string>
    <string name="ios_title">IOS Developer</string>
    <string name="ios_descr">Опыт разработки под платформу iOS от 3-х лет;</string>
    <string name="toolbar_login_title">Login Screen</string>
    <string name="toolbar_main_title">Main Screen</string>
    <string name="toolbar_vacancies_title">Vacancies</string>
    <string name="toolbar_offices_title">Offices</string>
    <string name="moscowOfficeName">Moscow</string>
    <string name="moscowOfficeDesription">Presnenskaya naberezhnaya, d.6, str. 2, BTS «Bashnya Imperiya», 3 podyezd, 53 etazh, ofis 13</string>
    <string name="kazanOfficeName">Kazan</string>
    <string name="kazanOfficeDesription">st. N. Ershova, 76/1, office. 213</string>
    <string name="rostovOnDonOfficeName">Rostov-On-Don</string>
    <string name="rostovOnDonOfficeDesription">st. Tekucheva, 246, 3rd floor</string>
    <string name="minskOfficeName">Minsk</string>
    <string name="minskOfficeDesription">Pobediteley Ave, 7A</string>
    <string name="gomelOfficeName">Gomel</string>
    <string name="gomelOfficeDesription">st. Sovetskya, 41B</string>
    <string name="find_hint">Enter a request</string>
</resources>