<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.VacanciesFragment">
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <com.lesson.sergeev_lesson2.cardCustomView.AstonCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_text="@string/flutter_title"
        android:layout_marginHorizontal="8dp"
        app:subtitle_text="@string/flutter_descr"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <com.lesson.sergeev_lesson2.cardCustomView.AstonCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_text="@string/fullstack_title"
        android:layout_marginHorizontal="8dp"
        app:subtitle_text="@string/fullstack_descr"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <com.lesson.sergeev_lesson2.cardCustomView.AstonCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        app:title_text="@string/android_title"
        app:subtitle_text="@string/android_descr"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <com.lesson.sergeev_lesson2.cardCustomView.AstonCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_text="@string/ios_title"
        android:layout_marginHorizontal="8dp"
        app:subtitle_text="@string/ios_descr"/>
</LinearLayout>