<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.OfficesFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/MoscowTV"
        style="@style/ChipsFragmentStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moscow" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/KazanTV"
        style="@style/ChipsFragmentStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kazan" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/RostovOnDonTV"
        style="@style/ChipsFragmentStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rostov_Na_Donu" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/MinskTV"
        style="@style/ChipsFragmentStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minsk" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/GomelTV"
        style="@style/ChipsFragmentStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gomel" />

</LinearLayout>